Fix search button on mobile devices (#23)

--- a/src/client/stylesheets/partials/_mpdp-search.scss
+++ b/src/client/stylesheets/partials/_mpdp-search.scss
@@ -31,6 +31,12 @@
   left: 0;
   right: 0;
   z-index: 1;
+  
+  // On mobile, use static positioning to push content down
+  @media (max-width: 640px) {
+    position: static;
+    margin-bottom: 1rem;
+  }
 }
 
 #suggestions div {
@@ -86,17 +92,30 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 @media (max-width: 640px) {
-  .form-inline input {
-    margin: 10px 0;
-  }
-  
   .form-inline {
     flex-direction: column;
     align-items: stretch;
+    
+    input {
+      margin: 10px 0;
+    }
   }
 
   .download-csv-flex-end {
-    margin: 15px;
+    margin-top: govuk-spacing(2);
+    justify-content: flex-start;
+  }
+
+  #total-results {
+    margin-bottom: govuk-spacing(1);
+  }
+
+  #download-all-link,
+  #download-results-link {
+    display: block;
+    padding: govuk-spacing(1);
+    margin: govuk-spacing(2) 0;
+    min-height: 44px;
   }
 
   .mpdp-details-padding-top {
